# hse_coursework

./: .gitignore  README.md  annote.py  cli.py  main.py  main_annotate.py  pyproject.toml
hse_coursework/: convert.py  schemas.py  service.py  text.py  types.py
hse_coursework/utils/: device.py  iterators.py  logging.py  settings.py  srt.py  timer.py
