[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Alexander Bespalov <discrimy.off@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
whisperx = {git = "https://github.com/m-bain/whisperX", rev = "f2da2f858e99e4211fe4f64b5f2938b007827e17"}
faster-whisper = "1.0.0"
transformers = "*"
ffmpeg-python = "^0.2.0"
nltk = "^3.8.1"
pandas = "^2.0.3"
pyannote-audio = "*"
pydantic = "^2.7.1"
torch = "^2.3.0"
torchaudio = "^2.3.0"
speechbrain = "^1.0.0"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
